--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./assets/main.js"></script>
 </body>
 </html>
