cambiado nombre assets

--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="./css/main.css" type="text/css" />
 <link rel="stylesheet" href="./css/clock.css" type="text/css" />
+<link rel="stylesheet" href="./css/main.css" type="text/css" />
 <title>Hello...</title>
 </head>
 
 <body jsb_clk="clock1">
 
-	<!--<div class="mainContent" >-->
+	<div class="mainContent" jsb_clk="clock2">
 		
-	<!--</div>-->
-
-
+	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="./assets/main.js"></script>
 </body>
 </html>
